refactor: Use Lombok to reduce boilerplate